Fix horizontal scrolling in Safari

--- a/css/logs.css
+++ b/css/logs.css
@@ -6,7 +6,6 @@
   overflow: auto;
   grid-area: logs;
   align-content: start;
-  width: 100%;
   height: 100%;
 
   @media screen and (max-width: 640px) {
@@ -22,6 +21,7 @@
     content-visibility: auto;
     height: 1.4rlh;
     grid-template-columns: 5fr 95fr;
+    width: max-content;
 
     &:nth-child(even) {
       div {
